--- a/index.html
+++ b/index.html
@@ -1,468 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>드로이봇 공식 웹페이지 입니다.</title>
-<meta name="Description" CONTENT="드로이봇은 음악, 도박, 서버관리 등등 다양한 기능들이 내장되어있는 디스코드 봇입니다!">
-<link rel="canonical" href="https://phbot.kr">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-168888348-1"></script>
-<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-168888348-1');
-	</script>
-<meta name="og:site_name" content="드로이봇 공식 웹페이지 입니다.">
-<meta name="theme-color" content="#0170ed">
-<meta name="og:image" content="https://cdn.discordapp.com/avatars/702661901921943662/313f83e781586606d83108cfd4204899.webp?size=1280">
-<meta name="twitter:image" content="https://cdn.discordapp.com/avatars/702661901921943662/313f83e781586606d83108cfd4204899.webp?size=1280">
-<meta name="og:title" content="드로이봇 공식 웹페이지 입니다.">
-<meta name="og:description" content="드로이봇은 디스코드 봇입니다!(여기 추가 예정)">
-<meta name="og:type" content="website">
-<link rel="stylesheet" href="./css/style.css">
-<link rel="shortcut icon" href="./file/logo.ico" type="image/y-icon" >
-<style data-jss="" data-meta="msvg">
-		.msvg-main {
-		  fill: currentColor;
-		  width: 1em;
-		  height: 1em;
-		  display: inline-block;
-		  font-size: 1.5rem;
-		  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-		  flex-shrink: 0;
-		  user-select: none;
-		}
-		.msvg-colorPrimary {
-		  color: #23272A;
-		}
-		.msvg-colorSecondary {
-		  color: #0170ed;
-		}
-		.msvg-colorAction {
-		  color: rgba(0, 0, 0, 0.54);
-		}
-		.msvg-colorError {
-		  color: #F04747;
-		}
-		.msvg-colorDisabled {
-		  color: rgba(0, 0, 0, 0.26);
-		}
-		.msvg-fontSizeInherit {
-		  font-size: inherit;
-		}
-		.msvg-fontSizeSmall {
-		  font-size: 1.25rem;
-		}
-		.msvg-fontSizeLarge {
-		  font-size: 2.1875rem;
-		}
-	</style>
-<style data-jss="" data-meta="mbtn_bs">
-		.mbtn_bs-main {
-		  color: inherit;
-		  border: 0;
-		  cursor: pointer;
-		  margin: 0;
-		  display: inline-flex;
-		  outline: 0;
-		  padding: 0;
-		  position: relative;
-		  align-items: center;
-		  user-select: none;
-		  border-radius: 0;
-		  vertical-align: middle;
-		  -moz-appearance: none;
-		  justify-content: center;
-		  text-decoration: none;
-		  background-color: transparent;
-		  -webkit-appearance: none;
-		  -webkit-tap-highlight-color: transparent;
-		}
-		.mbtn_bs-main::-moz-focus-inner {
-		  border-style: none;
-		}
-		.mbtn_bs-main.Mui-disabled {
-		  cursor: default;
-		  pointer-events: none;
-		}
-		@media print {
-		  .mbtn_bs-main {
-		    -webkit-print-color-adjust: exact;
-		  }
-		}
-	</style>
-<style data-jss="" data-meta="mubtn">
-		.mubtn-main {
-		  flex: 0 0 auto;
-		  color: rgba(0, 0, 0, 0.54);
-		  padding: 12px;
-		  overflow: visible;
-		  font-size: 1.5rem;
-		  text-align: center;
-		  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-		  border-radius: 50%;
-		}
-		.mubtn-main:hover {
-		  background-color: rgba(0, 0, 0, 0.04);
-		}
-		.mubtn-main.Mui-disabled {
-		  color: rgba(0, 0, 0, 0.26);
-		  background-color: transparent;
-		}
-		@media (hover: none) {
-		  .mubtn-main:hover {
-		    background-color: transparent;
-		  }
-		}
-		.mubtn-edgeStart {
-		  margin-left: -12px;
-		}
-		.mubtn-sizeSmall.mubtn-edgeStart {
-		  margin-left: -3px;
-		}
-		.mubtn-edgeEnd {
-		  margin-right: -12px;
-		}
-		.mubtn-sizeSmall.mubtn-edgeEnd {
-		  margin-right: -3px;
-		}
-		.mubtn-colorInherit {
-		  color: inherit;
-		}
-		.mubtn-colorPrimary {
-		  color: #23272A;
-		}
-		.mubtn-colorPrimary:hover {
-		  background-color: rgba(35, 39, 42, 0.04);
-		}
-		@media (hover: none) {
-		  .mubtn-colorPrimary:hover {
-		    background-color: transparent;
-		  }
-		}
-		.mubtn-colorSecondary {
-		  color: #0170ed;
-		}
-		.mubtn-colorSecondary:hover {
-		  background-color: rgba(2, 112, 236, 0.04);
-		}
-		@media (hover: none) {
-		  .mubtn-colorSecondary:hover {
-		    background-color: transparent;
-		  }
-		}
-		.mubtn-sizeSmall {
-		  padding: 3px;
-		  font-size: 1.125rem;
-		}
-		.mubtn-label {
-		  width: 100%;
-		  display: flex;
-		  align-items: inherit;
-		  justify-content: inherit;
-		}
-	</style>
-<style data-jss="" data-meta="mbtn">
-		.mbtn-main {
-		  color: rgba(0, 0, 0, 0.87);
-		  padding: 6px 16px;
-		  font-size: 15px;
-		  min-width: 64px;
-		  box-sizing: border-box;
-		  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-		  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-		  font-weight: 500;
-		  line-height: 1.75;
-		  border-radius: 4px;
-		  letter-spacing: 0.02857em;
-		  text-transform: uppercase;
-		}
-		.mbtn-main:hover {
-		  text-decoration: none;
-		  background-color: rgba(0, 0, 0, 0.04);
-		}
-		.mbtn-main.Mui-disabled {
-		  color: rgba(0, 0, 0, 0.26);
-		}
-		@media (hover: none) {
-		  .mbtn-main:hover {
-		    background-color: transparent;
-		  }
-		}
-		.mbtn-main:hover.Mui-disabled {
-		  background-color: transparent;
-		}
-		.mbtn-label {
-		  width: 100%;
-		  display: inherit;
-		  align-items: inherit;
-		  justify-content: inherit;
-		}
-		.mbtn-text {
-		  padding: 6px 8px;
-		}
-		.mbtn-textPrimary {
-		  color: #23272A;
-		}
-		.mbtn-textPrimary:hover {
-		  background-color: rgba(35, 39, 42, 0.04);
-		}
-		@media (hover: none) {
-		  .mbtn-textPrimary:hover {
-		    background-color: transparent;
-		  }
-		}
-		.mbtn-textSecondary {
-		  color: #0170ed;
-		}
-		.mbtn-textSecondary:hover {
-		  background-color: rgba(2, 112, 236, 0.04);
-		}
-		@media (hover: none) {
-		  .mbtn-textSecondary:hover {
-		    background-color: transparent;
-		  }
-		}
-		.mbtn-outlined {
-		  border: 1px solid rgba(0, 0, 0, 0.23);
-		  padding: 5px 15px;
-		}
-		.mbtn-outlined.Mui-disabled {
-		  border: 1px solid rgba(0, 0, 0, 0.12);
-		}
-		.mbtn-outlinedPrimary {
-		  color: #23272A;
-		  border: 1px solid rgba(35, 39, 42, 0.5);
-		}
-		.mbtn-outlinedPrimary:hover {
-		  border: 1px solid #23272A;
-		  background-color: rgba(35, 39, 42, 0.04);
-		}
-		@media (hover: none) {
-		  .mbtn-outlinedPrimary:hover {
-		    background-color: transparent;
-		  }
-		}
-		.mbtn-outlinedSecondary {
-		  color: #0170ed;
-		  border: 1px solid rgba(114, 137, 218, 0.5);
-		}
-		.mbtn-outlinedSecondary:hover {
-		  border: 1px solid #0170ed;
-		  background-color: rgba(2, 112, 236, 0.04);
-		}
-		.mbtn-outlinedSecondary.Mui-disabled {
-		  border: 1px solid rgba(0, 0, 0, 0.26);
-		}
-		@media (hover: none) {
-		  .mbtn-outlinedSecondary:hover {
-		    background-color: transparent;
-		  }
-		}
-		.mbtn-inpack {
-		  color: rgba(0, 0, 0, 0.87);
-		  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
-		  background-color: #e0e0e0;
-		}
-		.mbtn-inpack:hover {
-		  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
-		  background-color: #d5d5d5;
-		}
-		.mbtn-inpack.Mui-focusVisible {
-		  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
-		}
-		.mbtn-inpack:active {
-		  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
-		}
-		.mbtn-inpack.Mui-disabled {
-		  color: rgba(0, 0, 0, 0.26);
-		  box-shadow: none;
-		  background-color: rgba(0, 0, 0, 0.12);
-		}
-		@media (hover: none) {
-		  .mbtn-inpack:hover {
-		    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
-		    background-color: #e0e0e0;
-		  }
-		}
-		.mbtn-inpack:hover.Mui-disabled {
-		  background-color: rgba(0, 0, 0, 0.12);
-		}
-		.mbtn-inpackPrimary {
-		  color: #fff;
-		  background-color: #23272A;
-		}
-		.mbtn-inpackPrimary:hover {
-		  background-color: rgb(24, 27, 29);
-		}
-		@media (hover: none) {
-		  .mbtn-inpackPrimary:hover {
-		    background-color: #23272A;
-		  }
-		}
-		.mbtn-in_con {
-		  color: #fff;
-		  background-color: #0170ed;
-		}
-		.mbtn-in_con:hover {
-		  background-color: rgb(11, 90, 179);
-		}
-		@media (hover: none) {
-		  .mbtn-in_con:hover {
-		    background-color: #0170ed;
-		  }
-		}
-		.mbtn-disableElevation {
-		  box-shadow: none;
-		}
-		.mbtn-disableElevation:hover {
-		  box-shadow: none;
-		}
-		.mbtn-disableElevation.Mui-focusVisible {
-		  box-shadow: none;
-		}
-		.mbtn-disableElevation:active {
-		  box-shadow: none;
-		}
-		.mbtn-disableElevation.Mui-disabled {
-		  box-shadow: none;
-		}
-		.mbtn-colorInherit {
-		  color: inherit;
-		  border-color: currentColor;
-		}
-		.mbtn-textSizeSmall {
-		  padding: 4px 5px;
-		  font-size: 0.8125rem;
-		}
-		.mbtn-textSizeLarge {
-		  padding: 8px 11px;
-		  font-size: 0.9375rem;
-		}
-		.mbtn-outlinedSizeSmall {
-		  padding: 3px 9px;
-		  font-size: 0.8125rem;
-		}
-		.mbtn-outlinedSizeLarge {
-		  padding: 7px 21px;
-		  font-size: 0.9375rem;
-		}
-		.mbtn-inpackSizeSmall {
-		  padding: 4px 10px;
-		  font-size: 0.8125rem;
-		}
-		.mbtn-inpackSizeLarge {
-		  padding: 8px 22px;
-		  font-size: 0.9375rem;
-		}
-		.mbtn-fullWidth {
-		  width: 100%;
-		}
-		.mbtn-setup_ico {
-		  display: inherit;
-		  margin-left: -4px;
-		  margin-right: 8px;
-		}
-		.mbtn-setup_ico.mbtn-iconSizeSmall {
-		  margin-left: -2px;
-		}
-		.mbtn-endIcon {
-		  display: inherit;
-		  margin-left: 8px;
-		  margin-right: -4px;
-		}
-		.mbtn-endIcon.mbtn-iconSizeSmall {
-		  margin-right: -2px;
-		}
-		.mbtn-iconSizeSmall > *:first-child {
-		  font-size: 18px;
-		}
-		.mbtn-ico_smed > *:first-child {
-		  font-size: 20px;
-		}
-		.mbtn-iconSizeLarge > *:first-child {
-		  font-size: 22px;
-		}
-		.footer {
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			width: 100%;
-			padding: 15px 0;
-			text-align: center;
-			color: white;
-		}
-	</style>
-<script>
-		function openNav() {
-		  document.getElementById("mySidenav").style.width = "300px";
-		}
-
-		function closeNav() {
-		  document.getElementById("mySidenav").style.width = "0";
-		}
-	</script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>오늘의학교</title>
 </head>
 <body>
-<div id="mySidenav" class="sidenav">
-<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-<a style="font-weight: bold;" href="./index.html">🏠홈</a>
-<details>
-<summary style="font-weight: bold;">📃명령어</summary>
-<div class="sidenav_un">
-<a style="font-weight: bold;" href="./command/basic/index.html">기본 명령어</a>
-<a style="font-weight: bold;" href="./command/admin/index.html">서버관리 명령어</a>
-<a style="font-weight: bold;" href="./command/game/index.html">게임 명령어</a>
-<a style="font-weight: bold;" href="./command/fun/index.html">재밋거리 명령어</a>
-<a style="font-weight: bold;" href="./command/utility/index.html">유틸리티 명령어</a>
-<a style="font-weight: bold;" href="./command/music/index.html">뮤직봇 명령어</a>
-</div>
-</details>
-<a style="font-weight: bold;" href="https://discord.gg/KTpeeJS9EB">📢드로이봇 서포터</a>
-<a style="font-weight: bold;" href="https://status.phservice.kro.kr/">📊서버상태</a>
-<a style="font-weight: bold;" href="https://phbot.kr/page/terms_of_use.html">📚이용약관</a>
-<a style="font-weight: bold;" href="./page/developers.html">🛠개발자</a>
-</div>
-<img onclick="openNav()" src="./file/menu_open.png">
-<center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5740519206650027" crossorigin="anonymous"></script>
-
-<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5740519206650027" data-ad-slot="7956530078" data-ad-format="auto" data-full-width-responsive="true"></ins>
-<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-		</script>
-</center>
-<div id="topcenter">
-<!--img style="max-width: 100%; height: auto;" width="1000" height="200" src="./file/logo.png" alt="망할 html"-->
-<img width="1000" height="750" src="./file/logo.png" alt="망할 html">
-</div>
-<div id="maincenter">
-<span style="font-weight:bold; font-size:2.5vh;  color: white;">드로이봇은 다기능 디스코드봇 입니다.<br>
-지속적으로 기능을 추가하여 여러 가지 봇을 추가할 필요 없이<br>
-다방면에 대체 가능한 통합된 봇을 만들어가고 있습니다.
-</span>
-</div>
-<div id="undercenter">
-<a style="margin: 0px 25px 0px 0px;" class="mbtn_bs-main mbtn-main mbtn-inpack button mbtn-in_con" tabindex="0" aria-disabled="false" href="여기에 봇 초대 링크" target="_blank">
-<span class="mbtn-label" style="font-size:1.5vh;">
-<span class="mbtn-setup_ico mbtn-ico_smed">
-<svg class="msvg-main" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
-<path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"></path>
-</svg>
-</span>드로이봇 초대하기</span>
-<span class="mutr-main"></span>
-</a>
-<a style="margin: 0px 0px 0px 25px;" class="mbtn_bs-main mbtn-main mbtn-inpack button mbtn-in_con" tabindex="0" aria-disabled="false">
-<span class="mbtn-label" onclick="openNav()" style="font-size:1.5vh;">
-<span class="mbtn-setup_ico mbtn-ico_smed">
-<svg class="msvg-main" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
-<path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"></path>
-</svg>
-</span>명령어 확인하기</span>
-<span class="mutr-main"></span>
-</a>
-</div>
+    메인페이지
 </body>
 </html>
